tests/errors/multiple-attr-vals.futil
import "primitives/core.futil";
import "primitives/memories/comb.futil";
component main() -> () {
  cells {
    @external(1) @external(2) r = std_reg(32);
  }
  wires {}
  control {}
}
